# zk-benchmarks

./: Cargo.toml  README.md
contracts/src/: ZKBenchmarks.sol
contracts/test/: ZKBenchmarks.t.sol
core/: Cargo.toml
core/src/: lib.rs
program/: Cargo.toml
program/elf/: riscv32im-succinct-zkvm-elf
program/src/: main.rs
script/: Cargo.toml  rust-toolchain
script/src/: main.rs
