[workspace]
[package]
version = "0.1.0"
name = "op_benchmarks-script"
edition = "2021"

[dependencies]
sha2 = "0.10.8"
ed25519-dalek = "2.1.1"
hex = "0.4.3"
op-benchmarks-core = { path = "../core" }
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git" }

[build-dependencies]
sp1-helper = { git = "https://github.com/succinctlabs/sp1.git" }